...
            </objects>
            <point key="canvasLocation" x="206" y="138"/>
        </scene>
        <!--LocationView-->
        <scene sceneID="LC4-rf-aDF">
            <objects>
                <viewController storyboardIdentifier="LocationView" title="LocationView" id="UaA-pJ-DAr" customClass="LocationViewController" customModule="tech_task" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="u8a-QJ-6Hv">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sFs-x8-TOk">
                                <rect key="frame" x="163" y="423" width="88" height="30"/>
                                <state key="normal" title="Get Location"/>
                                <connections>
                                    <action selector="buttonTapped" destination="UaA-pJ-DAr" eventType="touchUpInside" id="9zh-UP-DmU"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="no permission" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JF9-5c-msc" userLabel="Location Status label">
                                <rect key="frame" x="153.5" y="453" width="107.5" height="21"/>
...
            </objects>
            <point key="canvasLocation" x="933" y="138"/>
        </scene>
        <!--WaitingView-->
        <scene sceneID="By8-wc-iSQ">
            <objects>
                <viewController storyboardIdentifier="WaitingView" title="WaitingView" id="FWe-PG-ail" customClass="WaitingViewController" customModule="tech_task" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="vWk-SW-cLk">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="loading..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dnd-EK-eHb">
                                <rect key="frame" x="15" y="435" width="384" height="36"/>
                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Finished Loading" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Bx-iZ-CwG">
                                <rect key="frame" x="142.5" y="404" width="129.5" height="21"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
...
